<resources>
    <string name="app_name">inTAC</string>
    <string name="todo">TODO</string>
    <string name="btEnter">Войти</string>
    <string name="plainPass">Пароль</string>
    <string name="plainLogin">Логин</string>
    <string name="textNoAcc">Нет аккаунта?</string>
    <string name="textForLogin">Введите свой логин и пароль, чтобы продолжить</string>
    <string name="btAuthG">G+</string>
    <string name="btAuthVK">VK</string>
    <string name="textGreetings">Здравствуйте!</string>
    <string name="textGoReg">Зарегистрируйтесь</string>
    <string name="textForgotPass">Забыли пароль?</string>
    <string name="textRegistration">Регистрация</string>
    <string name="textHelpRegistration">Заполните все поля, чтобы создать аккаунт</string>
    <string name="textAlreadyHaveAcc">Уже есть аккаунт?</string>
    <string name="textEnter">Войдите</string>
    <string name="plainSecondName">Фамилия</string>
    <string name="plainFirstName">Имя</string>
    <string name="btForMe">Для себя</string>
    <string name="btForBusiness">Для бизнеса</string>
    <string name="plainCompanyName">Название компании</string>
    <string name="textBirthDate">Дата рождения</string>
    <string name="plainDay">ДД</string>
    <string name="plainMonth">ММ</string>
    <string name="plainYear">ГГ</string>
    <string name="btContinue">Далее</string>
    <string name="plainRegLogin">Почта или номер телефона</string>
    <string name="plainRepeatPass">Повторите пароль</string>
    <string name="btCreateAcc">Создать</string>
    <string name="btUploadPicture">Загрузить фото товара</string>
    <string name="btPost">Опубликовать</string>
    <string name="plainPostName">Название товара</string>
    <string name="plainPostDescription">Описание товара</string>
    <string name="plainContacts">Контакты продавца</string>
    <string name="btAddPost">+</string>
    <string name="textPostName">Название</string>
    <string name="textPostDescription">Описание</string>
    <string name="textContacts">Контакты продавца</string>
    <string name="title_feed">Лента</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plainSearch">Поиск</string>
    <string name="btBuying">КУПИТЬ</string>
    <string name="title_search">Поиск</string>
    <string name="title_addPost">Создать</string>
    <string name="title_reactions">Реакции</string>
    <string name="title_profile">Профиль</string>
    <string name="text_soon">Скоро</string>
    <string name="edit_Personal">Редактировать профиль</string>
    <string name="textChangePhotoPersonal">Изменить фото профиля</string>
    <string name="editNamePersonal">Имя</string>
    <string name="editUserNamePersonal">Имя пользователя</string>
    <string name="editDescriptionPersonal">О себе</string>
    <string name="btSave">Сохранить</string>
    <string name="textChangePassword">Изменить пароль</string>
    <string name="editDescriptionBusiness">О компании</string>
    <string name="editNameBusiness">Название компании</string>
    <string name="username">Имя пользователя</string>
    <string name="numPost">100</string>
    <string name="textPost">Публикации</string>
    <string name="text_login">Логин</string>
    <string name="text_describtion_acc">Описание, какие мы классные!</string>
    <string name="textSubscribers">Подписчики</string>
    <string name="textSubscribtons">Подписки</string>
    <string name="numSubscribers">100</string>
    <string name="numSubscribtions">100</string>
    <string name="plainEditSurname">Фамилия</string>
    <string name="plainWebLink">Ссылка на товар</string>
</resources>