<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:visibility="visible"
    tools:context=".Registration">

    <Button
        android:id="@+id/btContinue"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="115dp"
        android:background="@drawable/enter_btn"
        android:backgroundTint=" #0043BE"
        android:text="@string/btContinue"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plainDay" />

    <EditText
        android:id="@+id/plainDay"
        android:layout_width="62dp"
        android:layout_height="50dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rectangle_for_date"
        android:ems="10"
        android:hint="@string/plainDay"
        android:textColorHint="#D0D0D0"
        android:inputType="number"
        android:paddingStart="18dp"
        android:textColor=" #D0D0D0"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/plainMonth"
        app:layout_constraintStart_toEndOf="@+id/textBirthDate"
        app:layout_constraintTop_toBottomOf="@+id/plainFirstName" />

    <EditText
        android:id="@+id/plainYear"
        android:layout_width="62dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rectangle_for_date"
        android:ems="10"
        android:hint="@string/plainYear"
        android:textColorHint="#D0D0D0"
        android:inputType="number"
        android:paddingStart="18dp"
        android:textColor=" #D0D0D0"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/plainMonth"
        app:layout_constraintTop_toBottomOf="@+id/plainFirstName" />

    <EditText
        android:id="@+id/plainCompanyName"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/rectangle"
        android:backgroundTint="#D0D0D0"
        android:drawableLeft="@drawable/group_of_people"
        android:drawablePadding="25dp"
        android:elegantTextHeight="false"
        android:ems="10"
        android:freezesText="false"
        android:hint="@string/plainCompanyName"
        android:inputType="textPersonName"
        android:paddingLeft="30dp"
        android:textAllCaps="false"
        android:textColor="#197BDD"
        android:textColorHint="#D0D0D0"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btForBusiness" />

    <ToggleButton
        android:id="@+id/btForBusiness"
        android:layout_width="147dp"
        android:layout_height="49dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/btforbusiness_selector"
        android:textAllCaps="false"
        android:textColor="@color/text_reg_choose_color"
        android:textOff=""
        android:textOn=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHelpRegistration" />

    <EditText
        android:id="@+id/plainFirstName"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/rectangle"
        android:backgroundTint="#D0D0D0"
        android:drawableLeft="@drawable/group_of_people"
        android:drawablePadding="25dp"
        android:elegantTextHeight="false"
        android:ems="10"
        android:freezesText="false"
        android:hint="@string/plainFirstName"
        android:inputType="textPersonName"
        android:paddingLeft="30dp"
        android:textAllCaps="false"
        android:textColor="#197BDD"
        android:textColorHint="#D0D0D0"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plainSecondName" />

    <EditText
        android:id="@+id/plainSecondName"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/rectangle"
        android:backgroundTint="#D0D0D0"
        android:drawableLeft="@drawable/group_of_people"
        android:drawablePadding="25dp"
        android:elegantTextHeight="false"
        android:ems="10"
        android:freezesText="false"
        android:hint="@string/plainSecondName"
        android:inputType="textPersonName"
        android:paddingLeft="30dp"
        android:textAllCaps="false"
        android:textColor="#197BDD"
        android:textColorHint="#D0D0D0"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plainCompanyName" />

    <ImageButton
        android:id="@+id/btBack"
        android:layout_width="54dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="69dp"
        android:background="#00000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_left" />

    <TextView
        android:id="@+id/textRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-black"
        android:includeFontPadding="false"
        android:text="@string/textRegistration"
        android:textColor="#282828"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textHelpRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="17dp"
        android:text="@string/textHelpRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRegistration" />

    <TextView
        android:id="@+id/textBirthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="11dp"
        android:text="@string/textBirthDate"
        android:textColor=" #000000"
        app:layout_constraintEnd_toStartOf="@+id/plainDay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plainFirstName" />

    <EditText
        android:id="@+id/plainMonth"
        android:layout_width="62dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rectangle_for_date"
        android:ems="10"
        android:hint="@string/plainMonth"
        android:textColorHint="#D0D0D0"
        android:inputType="number"
        android:paddingStart="18dp"
        android:textColor=" #D0D0D0"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/plainYear"
        app:layout_constraintStart_toEndOf="@+id/plainDay"
        app:layout_constraintTop_toBottomOf="@+id/plainFirstName" />

    <ToggleButton
        android:id="@+id/btForMe"
        android:layout_width="147dp"
        android:layout_height="49dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/btforme_selector"
        android:textOff=""
        android:textOn=""
        app:layout_constraintEnd_toStartOf="@+id/btForBusiness"
        app:layout_constraintTop_toBottomOf="@+id/textHelpRegistration" />

</androidx.constraintlayout.widget.ConstraintLayout>