<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration_page2">

    <Button
        android:id="@+id/btCreateAcc"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="115dp"
        android:background="@drawable/enter_btn"
        android:backgroundTint=" #0043BE"
        android:text="@string/btCreateAcc"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plainRepeatPass" />

    <EditText
        android:id="@+id/plainRegPass"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="21dp"
        android:autofillHints=""
        android:background="@drawable/rectangle"
        android:backgroundTint="#D0D0D0"
        android:drawableLeft="@drawable/lock_for_pass"
        android:drawablePadding="25dp"
        android:elegantTextHeight="false"
        android:ems="10"
        android:freezesText="false"
        android:hint="@string/plainPass"
        android:inputType="textEmailAddress"
        android:paddingLeft="30dp"
        android:textAllCaps="false"
        android:textColor="#197BDD"
        android:textColorHint="#D0D0D0"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plainRegLogin" />

    <EditText
        android:id="@+id/plainRepeatPass"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="21dp"
        android:autofillHints=""
        android:background="@drawable/rectangle"
        android:backgroundTint="#D0D0D0"
        android:drawableLeft="@drawable/lock_for_pass"
        android:drawablePadding="25dp"
        android:elegantTextHeight="false"
        android:ems="10"
        android:freezesText="false"
        android:hint="@string/plainRepeatPass"
        android:inputType="textEmailAddress"
        android:paddingLeft="30dp"
        android:textAllCaps="false"
        android:textColor="#197BDD"
        android:textColorHint="#D0D0D0"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plainRegPass" />

    <EditText
        android:id="@+id/plainRegLogin"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="21dp"
        android:autofillHints=""
        android:background="@drawable/rectangle"
        android:backgroundTint="#D0D0D0"
        android:drawableLeft="@drawable/mail"
        android:drawablePadding="25dp"
        android:elegantTextHeight="false"
        android:ems="10"
        android:freezesText="false"
        android:hint="@string/plainRegLogin"
        android:inputType="textEmailAddress"
        android:paddingLeft="30dp"
        android:textAllCaps="false"
        android:textColor="#197BDD"
        android:textColorHint="#D0D0D0"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHelpRegistration_page2" />

    <TextView
        android:id="@+id/textHelpRegistration_page2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="17dp"
        android:text="@string/textHelpRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRegistration_page2" />

    <TextView
        android:id="@+id/textRegistration_page2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-black"
        android:includeFontPadding="false"
        android:text="@string/textRegistration"
        android:textColor="#282828"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btBack_page2"
        android:layout_width="54dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="69dp"
        android:background="#00000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_left" />
</androidx.constraintlayout.widget.ConstraintLayout>