<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".CreatePost">

    <Button
        android:id="@+id/btPost"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/enter_btn"
        android:backgroundTint=" #0043BE"
        android:onClick="UploadPost"
        android:text="@string/btPost"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btUploadPicture" />

    <EditText
        android:id="@+id/plainPostDescription"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/rectangle"
        android:backgroundTint="#D0D0D0"
        android:drawableLeft="@drawable/group_of_people"
        android:drawablePadding="25dp"
        android:elegantTextHeight="false"
        android:ems="10"
        android:freezesText="false"
        android:hint="@string/plainPostDescription"
        android:inputType="textPersonName"
        android:paddingLeft="30dp"
        android:textAllCaps="false"
        android:textColor="#197BDD"
        android:textColorHint="#D0D0D0"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plainPostName" />

    <EditText
        android:id="@+id/plainContacts"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/rectangle"
        android:backgroundTint="#D0D0D0"
        android:drawableLeft="@drawable/group_of_people"
        android:drawablePadding="25dp"
        android:elegantTextHeight="false"
        android:ems="10"
        android:freezesText="false"
        android:hint="@string/plainContacts"
        android:inputType="textPersonName"
        android:paddingLeft="30dp"
        android:textAllCaps="false"
        android:textColor="#197BDD"
        android:textColorHint="#D0D0D0"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plainPostDescription" />

    <EditText
        android:id="@+id/plainPostName"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/rectangle"
        android:backgroundTint="#D0D0D0"
        android:drawableLeft="@drawable/group_of_people"
        android:drawablePadding="25dp"
        android:elegantTextHeight="false"
        android:ems="10"
        android:freezesText="false"
        android:hint="@string/plainPostName"
        android:inputType="textPersonName"
        android:paddingLeft="30dp"
        android:textAllCaps="false"
        android:textColor="#197BDD"
        android:textColorHint="#D0D0D0"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btBack_create_post" />

    <ImageButton
        android:id="@+id/btBack_create_post"
        android:layout_width="54dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="69dp"
        android:background="#00000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_left" />

    <Button
        android:id="@+id/btUploadPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="37dp"
        android:background="@drawable/rectangle_for_upload_picture"
        android:onClick="choosePhoto"
        android:text="@string/btUploadPicture"
        android:textAllCaps="false"
        android:textColor="#0043BE"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plainContacts" />
</androidx.constraintlayout.widget.ConstraintLayout>